user lookup endpoint for peers added
